data/derived/fa15/progs/unify/prog2710.ml.out
Characters 92-94:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type ('a list -> 'b -> 'a list) list
       but an expression was expected of type 'b list
       The type variable 'b occurs inside 'a list -> 'b -> 'a list
